<resources>
    <string name="app_name">Insurance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_about">Nosotros</string>
    <string name="menu_policies">Pólizas</string>
    <string name="about_text2">¿Por qué elegirnos?</string>
    <string name="about_text3">Experiencia</string>
    <string name="about_text4">Más de 25 años de trabajo y compromiso avalan nuestra experiencia en servicios especializados en Seguros y Fianzas.
        \nHemos asegurado a más de 50 mil personas y más de 500 empresas.</string>
    <string name="about_text5">Relaciones</string>
    <string name="about_text6">Trabajamos con las mejores aseguradoras, afianzadoras y proveedores de servicios en el país para ofrecerte beneficios únicos a los mejores precios.</string>
    <string name="about_text7">Servicio 360º</string>
    <string name="about_text8">En Prevex nuestros clientes son lo más valioso.
        \nBrindarles un servicio personalizado, enfocado a atender todas sus situaciones, en cualquier caso, es prioridad.
        \nPara proteger lo que más quieres, te ofrecemos una solución 360°, a través de la asistencia de nuestro experimentado equipo de asesores, con atención personal 24/7.</string>
    <string name="about_text9">Profesionalismo</string>
    <string name="about_text10">Tenemos amplia experiencia para gestionar los programas de seguros y fianzas más competitivos del mercado mexicano.</string>
    <string name="about_text11">Valores</string>
    <string name="about_text12">Vivir y compartir nuestros valores es parte de nuestra esencia, es lo que nos distingue para ser los mejores aliados de nuestros socios de negocios y clientes.
        \nSon principios que hablan de lo que somos, lo que hacemos; nos guían y nos representan como una empresa responsable y leal.</string>
    <string name="contact_info">Rio De La Plata 203 Interior 12 Colonia Del Valle, San Pedro Garza Garcia Nuevo León. C.P.66220</string>
    <string name="contact_info2">8115331967</string>
    <string name="nav_item_1">Inicio</string>
    <string name="nav_item_2">Nosotros</string>
    <string name="nav_item_3">Pólizas</string>
    <string name="nav_item_4">Cotizar</string>
    <string name="nav_item_5">Mi aseguradora</string>
    <string name="nav_item_6">Formatos</string>
    <string name="nav_item_7">Contacto</string>
    <string name="nav_item_8">Cerrar sesión</string>
    <string name="nav_item_9">Chat</string>
    <string name="nav_item_12">Aviso de privacidad</string>
    <string name="nav_item_15">Borrar cuenta</string>
    <string name="state_unknown">Starting..."</string>
    <string name="state_idle">Waiting for download to start</string>
    <string name="state_fetching_url">Looking for resources to download</string>
    <string name="state_connecting">Connecting to the download server</string>
    <string name="state_downloading">Downloading resources</string>
    <string name="state_completed">Download finished</string>
    <string name="state_paused_network_unavailable">Download paused because no network is available</string>
    <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
    <string name="state_paused_by_request">Download paused</string>
    <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
    <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
    <string name="state_paused_roaming">Download paused because you are roaming</string>
    <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
    <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
    <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
    <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
    <string name="state_failed_cancelled">Download cancelled</string>
    <string name="state_failed">Download failed</string>
    <string name="kilobytes_per_second">%1$s KB/s</string>
    <string name="time_remaining">Time remaining: %1$s</string>
    <string name="time_remaining_notification">%1$s left</string>
    <string name="esperand_descarga">Esperand descarga</string>
    <string name="alerta">Alerta</string>
    <string name="alerta_message">Es necesario descargar el archivo de recursos para continuar.</string>
    <string name="ok">OK</string>
    <string name="contact_intrucciones">INSTRUCCIONES</string>
    <string name="contact_contenidoInstrucciones">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam condimentum ornare nisi.</string>
    <string name="contact_send_message">Enviando comentarios...</string>
    <string name="contact_btn_send">Enviar Mensaje</string>
    <string name="contact_input_name">Nombre*</string>
    <string name="contact_input_email">Correo*</string>
    <string name="contact_input_mensaje">Escriba su mensaje*</string>
    <string name="contact_input_phone">Teléfono</string>
    <string name="contact_input_profile">Perfil</string>
    <string name="contact_input_city">Ciudad</string>
    <string name="contact_input_school">Escuela</string>
    <string name="contact_input_comments">Comentarios*</string>
    <string name="contact_input_legend">* Campos obligatorios</string>
    <string name="contact_input_cliente">Cliente*</string>
    <string name="profile_save">GUARDAR</string>
    <string name="profile_list">LISTAS</string>
    <string name="profile_client">CLIENTES</string>
    <string name="profile_textolista">Lista actual para trabajar:</string>
    <string name="profile_textolistadefault">Seleccionar lista.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_btn_visit">Visitanos</string>
    <string name="about_btn_privacy">Aviso de privacidad</string>
    <string name="common_error_unknow">Error desconocido.</string>
    <string name="common_error_connect">Error de conexión.</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_warning_title">Aviso</string>
    <string name="dialog_sent">Enviado</string>
    <string name="quoter_error">Error al consultar cotizaciones</string>
    <string name="home_dialog_generate_report_msg">La póliza no tiene un numero telefonico registrado para llamar</string>
    <string name="home_dialog_quote_msg">Su usuario no tiene permisos para usar el cotizador. Favor de ponerse en contacto con su agente de seguros para solicitar acceso. Una vez asignado el permiso, cierre sesión y vuelva a ingresar.</string>
    <string name="home_btn_we">Nosotros</string>
    <string name="home_dialog_select_type_msg">El usuario no tiene pólizas asignadas</string>
    <string name="home_dialog_general_title">Fortis</string>
    <string name="home_btn_policies">Mis pólizas</string>
    <string name="home_btn_quote">Cotizar</string>
    <string name="common_sinister">Reportar siniestro</string>
    <string name="common_call_emergency">Llamar al 911</string>
    <string name="call_calling">Llamando…</string>
    <string name="hint_username">Usuario o Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <string name="login_empty_username">Ingresa un correo electrónico o usuario.</string>
    <string name="login_empty_password">Ingresa una contraseña.</string>
    <string name="login_recovery_empty_email">Ingrese el correo con el que se registró.</string>
    <string name="login_invalid_email">Ingresa un correo válido.</string>
    <string name="login_activation_email_sent_check">Correo de activación enviado, verifique sus correos recibidos.</string>
    <string name="login_recovery_email_sent_check">"Restauración de contraseña enviado, verifique sus correos recibidos."</string>
    <string name="login_error">Hay un problema con lo datos ingresados.</string>
    <string name="login_save_user_error">Error al guardar la sesión actual.</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_recovery_email_sent_error_unknown">Error al intentar recuperar la contraseña.</string>
    <string name="login_activation_email_sent_error_unknown">Error al intentar activar el correo.</string>
    <string name="login_error_email_not_found">El email ingresado no existe.</string>
    <string name="main_drawer_header_full_name" formatted="false">%1s %2s</string>
    <string name="menu_insurers">Mi aseguradora</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="notifications_progress_msg">Consultando notificaciones…</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="notifications_error">Error al cargar las notificaciones.</string>
    <string name="notifications_empty_msg">No hay notificaciones</string>
    <string name="register_error">El email ya existe.</string>
    <string name="register_success_title">Registro exitoso</string>
    <string name="register_user_created">Usuario creado exitosamente, para inicar sesión le hemos enviado un correo de activación.</string>
    <string name="register_user_exists_inactive">El usuario ya se encuentra registrado, reenviamos el correo de activación.</string>
    <string name="register_user_already_active">El usuario ya está activo, por favor inicia sesión.</string>
    <string name="login_btn_log_in">Iniciar sesión</string>
    <string name="register_btn_register">Registrarme</string>
    <string name="register_text_already_have_account">¿Ya tengo cuenta?</string>
    <string name="menu_documents">Formatos</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_delete_account">Borrar cuenta</string>
    <string name="menu_extras_group">Extras</string>
    <string name="menu_privacy">Privacidad</string>
    <string name="menu_notice_privacy">Aviso de privacidad</string>
    <string name="quote_chb_cp">No se el código postal</string>
    <string name="hint_cp">Código postal</string>
    <string name="hint_gender">Género</string>
    <string name="hint_birthdate">Fecha de nacimiento</string>
    <string name="hint_type">Tipo</string>
    <string name="hint_brand">Marca</string>
    <string name="hint_year">Año</string>
    <string name="hint_model">Modelo</string>
    <string name="hint_state">Estado</string>
    <string name="hint_city">Ciudad</string>
    <string name="hint_suburb">Colónia</string>
</resources>