<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".quoteFullModule.view.QuoteFullFragment">

    <data>
        <variable
            name="viewModel"
            type="com.cursosant.insurance.quoteFullModule.viewModel.QuoteFullViewModel" />
    </data>

    <ScrollView
        android:id="@+id/cMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/common_padding_default"
            android:paddingVertical="@dimen/common_padding_micro"
            android:orientation="vertical"
            app:setVisibility="@{viewModel.token != null}">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGender"
                android:hint="@string/hint_gender"
                app:clearError="@{true}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spGender"
                    android:text="@={viewModel.gender}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirthdate"
                android:hint="@string/hint_birthdate"
                android:enabled="@{viewModel.gender.length > 0}"
                app:clearError="@{true}"
                app:startIconDrawable="@drawable/ic_today"
                style="@style/DatePickerDense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthdate"
                    style="@style/DatePickerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilType"
                android:hint="@string/hint_type"
                app:clearError="@{true}"
                android:enabled="@{viewModel.birthdate.length > 0}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spType"
                    android:text="@={viewModel.type}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBrand"
                android:hint="@string/hint_brand"
                app:clearError="@{true}"
                android:enabled="@{viewModel.type.length > 0}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spBrand"
                    android:text="@={viewModel.brand}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilYear"
                android:hint="@string/hint_year"
                app:clearError="@{true}"
                android:enabled="@{viewModel.brand.length > 0}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spYear"
                    android:text="@={viewModel.year}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilModel"
                android:hint="@string/hint_model"
                app:clearError="@{true}"
                android:enabled="@{viewModel.year.length > 0}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spModel"
                    android:text="@={viewModel.model}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCP"
                android:hint="@string/hint_cp"
		app:setVisibility="@{!viewModel.checkedCP}"
                app:clearError="@{true}"
                style="@style/TextFieldDense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCp"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.cp}"
                    style="@style/EditTextForm"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_chb_cp"
                android:checked="@={viewModel.checkedCP}"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:setVisibility="@{!viewModel.checkedCP}">
                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:layout_marginEnd="@dimen/common_padding_micro"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@{viewModel.state}"
                    tools:text="Estado"/>
                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:layout_marginStart="@dimen/common_padding_micro"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@{viewModel.city}"
                    tools:text="Ciudad"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilState"
                android:hint="@string/hint_state"
                app:clearError="@{true}"
		app:setVisibility="@{viewModel.checkedCP}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spState"
                    android:text="@={viewModel.state}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCity"
                android:hint="@string/hint_city"
                app:clearError="@{true}"
                android:enabled="@{viewModel.state.length > 0}"
		app:setVisibility="@{viewModel.checkedCP}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spCity"
                    android:text="@={viewModel.city}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSuburb"
                android:hint="@string/hint_suburb"
                app:clearError="@{true}"
                android:enabled="@{viewModel.city.length > 0}"
                style="@style/SpinnerDense">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spSuburb"
                    android:text="@={viewModel.suburb}"
                    style="@style/SpinnerContent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnQuote"
                android:text="@string/home_btn_quote"
                style="@style/ButtonMainAction"/>
        </LinearLayout>
    </ScrollView>
</layout>