<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.cursosant.insurance.registerModule.viewModel.RegisterViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/containerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerModule.view.RegisterFragment">
        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:importantForAccessibility="no"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/normal_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/common_padding_large_xx"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFirstName"
                    android:layout_marginTop="@dimen/common_padding_large"
                    android:hint="@string/hint_name"
                    app:clearError="@{true}"
                    style="@style/TextFieldDense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:inputType="textPersonName|textCapWords"
                        android:nextFocusForward="@id/etLastName"
                        style="@style/EditTextForm"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLastName"
                    android:hint="@string/hint_last_name"
                    app:clearError="@{true}"
                    style="@style/TextFieldDense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:inputType="textPersonName|textCapWords"
                        android:nextFocusForward="@id/etEmail"
                        style="@style/EditTextForm"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:hint="@string/hint_email"
                    app:clearError="@{true}"
                    style="@style/TextFieldDense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@id/etPassword"
                        style="@style/EditTextForm"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:hint="@string/hint_password"
                    app:endIconMode="password_toggle"
                    app:clearError="@{true}"
                    style="@style/TextFieldDense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"
                        android:nextFocusForward="@id/etPasswordConfirm"
                        style="@style/EditTextForm"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordConfirm"
                    android:hint="@string/hint_password_confirm"
                    app:endIconMode="password_toggle"
                    app:clearError="@{true}"
                    style="@style/TextFieldDense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordConfirm"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        style="@style/EditTextForm"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_btn_register"
                    android:layout_marginTop="@dimen/common_padding_min"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_padding_default">
                    <TextView
                        android:id="@+id/tvQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text_already_have_account"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:textColor="@color/black"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoToLogin"
                        android:layout_width="wrap_content"
                        android:text="@string/login_btn_log_in"
                        style="@style/ButtonText"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            layout="@layout/progress_full_screen"
            app:inProgress="@{viewModel.inProgress}"
            app:msg="@{@string/register_progress_msg}"/>
    </FrameLayout>
</layout>